--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
         "dev:start": "nodemon -e js,jsx --ignore lib --ignore dist --exec babel-node src/server",
         "dev:wds": "webpack-dev-server --progress",
         "prod:build": "rimraf lib dist && babel src -d lib --ignore .test.js && cross-env NODE_ENV=production webpack -p --progress",
-        "prod:start": "cross-env NODE_ENV=production pm2 start lib/server && pm2 logs",
-        "prod:stop": "pm2 delete server",
+        "prod:start": "heroku local",
         "lint": "eslint src webpack.config.babel.js --ext .js,.jsx",
         "test": "yarn lint && flow && jest --coverage",
         "precommit": "yarn test",
-        "prepush": "yarn test && yarn prod:build"
+        "prepush": "yarn test && yarn prod:build",
+        "heroku-postbuild": "yarn prod:build"
     },
     "devDependencies": {
         "babel-cli": "^6.24.0",
@@ -38,7 +38,6 @@
         "husky": "^0.13.3",
         "jest": "^19.0.2",
         "nodemon": "^1.11.0",
-        "pm2": "^2.4.2",
         "redux-mock-store": "^1.2.2",
         "rimraf": "^2.6.1",
         "webpack": "^2.3.2",
@@ -69,5 +68,9 @@
         "socket.io": "^1.7.3",
         "socket.io-client": "^1.7.3",
         "tether": "^1.4.0"
+    },
+    "engines": {
+        "node": "7.x",
+        "yarn": "0.21.3"
     }
 }
